Added tile and board prefabs to /Kay
git-svn-id: https://su-13-project-slide-puzzle.googlecode.com/svn/trunk@3 d0c1d654-13ed-1448-279f-2abfe13a84c8

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
 * text=auto !eol
+Kay/large_board.blend -text
+Kay/med_board.blend -text
+Kay/small_board.blend -text
+Kay/tile.blend -text
+Kay/xl_board.blend -text
 docs/classdef.txt -text
