replaced source file "kchoi-class-diagrams.ncp" with "Board class diagram.png"
git-svn-id: https://su-13-project-slide-puzzle.googlecode.com/svn/trunk@9 d0c1d654-13ed-1448-279f-2abfe13a84c8

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,8 +4,8 @@ Kay/med_board.blend -text
 Kay/small_board.blend -text
 Kay/tile.blend -text
 Kay/xl_board.blend -text
+docs/Board[!!-~]class[!!-~]diagram.png -text
 docs/classdef.txt -text
-docs/kchoi-class-diagrams.ncp -text
 slide-puzzle/Assets/Materials/Material.mat -text
 slide-puzzle/Assets/Prefabs/LargeBoard.prefab -text
 slide-puzzle/Assets/Prefabs/Materials/Woodgrain.mat -text
