index.php of the facebook app
git-svn-id: https://su-13-project-slide-puzzle.googlecode.com/svn/trunk@12 d0c1d654-13ed-1448-279f-2abfe13a84c8

--- a/.gitattributes
+++ b/.gitattributes
@@ -289,3 +289,4 @@ slide-puzzle/ProjectSettings/ProjectSettings.asset -text
 slide-puzzle/ProjectSettings/QualitySettings.asset -text
 slide-puzzle/ProjectSettings/TagManager.asset -text
 slide-puzzle/ProjectSettings/TimeManager.asset -text
+su-puzzle-game/index.php -text
