--- a/.gitattributes
+++ b/.gitattributes
@@ -6,6 +6,33 @@ Kay/tile.blend -text
 Kay/xl_board.blend -text
 docs/Board[!!-~]class[!!-~]diagram.png -text
 docs/classdef.txt -text
+heroku/Untitled.rtf -text
+heroku/su-puzzle-game/.gitmodules -text
+heroku/su-puzzle-game/AppInfo.php -text
+heroku/su-puzzle-game/Readme.md -text
+heroku/su-puzzle-game/channel.html -text
+heroku/su-puzzle-game/images/fpo-picture.gif -text
+heroku/su-puzzle-game/images/get-started-bg.jpg -text
+heroku/su-puzzle-game/images/header-sketch.png -text
+heroku/su-puzzle-game/images/images.jpeg -text
+heroku/su-puzzle-game/images/picture-sketch.png -text
+heroku/su-puzzle-game/images/samples-bg.png -text
+heroku/su-puzzle-game/images/sprites.png -text
+heroku/su-puzzle-game/index.php -text
+heroku/su-puzzle-game/javascript/jquery-1.7.1.min.js -text
+heroku/su-puzzle-game/nbproject/private/private.properties -text
+heroku/su-puzzle-game/nbproject/private/private.xml -text
+heroku/su-puzzle-game/nbproject/project.properties -text
+heroku/su-puzzle-game/nbproject/project.xml -text
+heroku/su-puzzle-game/sdk/src/base_facebook.php -text
+heroku/su-puzzle-game/sdk/src/facebook.php -text
+heroku/su-puzzle-game/sdk/src/fb_ca_chain_bundle.crt -text
+heroku/su-puzzle-game/stylesheets/base.css -text
+heroku/su-puzzle-game/stylesheets/mobile.css -text
+heroku/su-puzzle-game/stylesheets/reset.css -text
+heroku/su-puzzle-game/stylesheets/screen.css -text
+heroku/su-puzzle-game/stylesheets/style1.css -text
+heroku/su-puzzle-game/utils.php -text
 slide-puzzle/Assets/Materials/Material.mat -text
 slide-puzzle/Assets/Prefabs/LargeBoard.prefab -text
 slide-puzzle/Assets/Prefabs/Materials/Woodgrain.mat -text
