- Board.moveTile() is now public - completed game tutorial - replaced puzzle board textures with wood plank texture from asset store - defined default puzzle tile color
todo:
- DAO

git-svn-id: https://su-13-project-slide-puzzle.googlecode.com/svn/trunk@15 d0c1d654-13ed-1448-279f-2abfe13a84c8

--- a/.gitattributes
+++ b/.gitattributes
@@ -35,7 +35,6 @@ heroku/su-puzzle-game/stylesheets/style1.css -text
 heroku/su-puzzle-game/utils.php -text
 slide-puzzle/Assets/Materials/Material.mat -text
 slide-puzzle/Assets/Prefabs/LargeBoard.prefab -text
-slide-puzzle/Assets/Prefabs/Materials/Woodgrain.mat -text
 slide-puzzle/Assets/Prefabs/MediumBoard.prefab -text
 slide-puzzle/Assets/Prefabs/Models/large_board.blend -text
 slide-puzzle/Assets/Prefabs/Models/med_board.blend -text
@@ -44,8 +43,6 @@ slide-puzzle/Assets/Prefabs/Models/tile.blend -text
 slide-puzzle/Assets/Prefabs/Models/xl_board.blend -text
 slide-puzzle/Assets/Prefabs/PuzzleTile.prefab -text
 slide-puzzle/Assets/Prefabs/SmallBoard.prefab -text
-slide-puzzle/Assets/Prefabs/Textures/Woodgrain.jpg -text
-slide-puzzle/Assets/Prefabs/Textures/Woodgrain2.jpg -text
 slide-puzzle/Assets/Prefabs/XLargeBoard.prefab -text
 slide-puzzle/Assets/Scenes/Main.unity -text
 slide-puzzle/Assets/Scripts/Board.cs -text
@@ -127,6 +124,8 @@ slide-puzzle/Assets/Standard[!!-~]Assets/Tessellation[!!-~]Shaders/_Example/Clif
 slide-puzzle/Assets/Standard[!!-~]Assets/Tessellation[!!-~]Shaders/_Example/CliffRock_NRM.png -text
 slide-puzzle/Assets/Standard[!!-~]Assets/Tessellation[!!-~]Shaders/_Example/LowPolySphere.fbx -text
 slide-puzzle/Assets/Standard[!!-~]Assets/Tessellation[!!-~]Shaders/_Example/_TessellationScene.unity -text
+slide-puzzle/Assets/Substances_Free/Materials/Wood_Planks_01.mat -text
+slide-puzzle/Assets/Substances_Free/Wood_Planks_01.sbsar -text
 slide-puzzle/Assets/iTween/Plugins/iTween.cs -text
 slide-puzzle/Assets/iTween/ReadMe!/ReadMe!.txt -text
 slide-puzzle/Assets/iTween/Sample/MoveSample.cs -text
@@ -193,15 +192,17 @@ slide-puzzle/Library/metadata/19/199ba61b407d7435aa1a5551f0844272 -text
 slide-puzzle/Library/metadata/1f/1fdce4427d10e48a0a07774903b01f73 -text
 slide-puzzle/Library/metadata/24/244c19b648f194fcd8b57d4d66403c4e -text
 slide-puzzle/Library/metadata/24/24f8b7f726c7047cb906be889dbf5ac1 -text
+slide-puzzle/Library/metadata/26/26710cdc34ad2b94ea3760c5e4ce7a8f -text
 slide-puzzle/Library/metadata/26/26d8bdbc8646bde48b05fbaacaaa6577 -text
 slide-puzzle/Library/metadata/26/26ebd1f47951f4434892c20bcd5e3861 -text
 slide-puzzle/Library/metadata/27/27acebc9ad1110f6d00074c88d76c639 -text
 slide-puzzle/Library/metadata/28/28776ef410870442b8d64e6ce9a3d548 -text
 slide-puzzle/Library/metadata/29/29222ffb2d6e5d042a85eab30234c836 -text
+slide-puzzle/Library/metadata/2e/2e165180b516d8749aa49df40b980808 -text
 slide-puzzle/Library/metadata/30/30e172896106619489a04550dad7b3f4 -text
 slide-puzzle/Library/metadata/31/31179a6bbd11e2c3d000dc0b8d76c639 -text
-slide-puzzle/Library/metadata/31/31b4b2c71f4f85e4c9e8f6c088d8b593 -text
 slide-puzzle/Library/metadata/31/31f6763de0920574092c8a69a66c717e -text
+slide-puzzle/Library/metadata/34/34d2def1ca0db2e42a90172d23ede940 -text
 slide-puzzle/Library/metadata/39/3939554270ba34e3c84bf1bc113cf5b7 -text
 slide-puzzle/Library/metadata/39/3954501323f24464f9e4418c78d8e8ce -text
 slide-puzzle/Library/metadata/3c/3cadc5c144b6941fd9b94e6f6cbaa3cc -text
@@ -217,6 +218,7 @@ slide-puzzle/Library/metadata/5b/5baab583450424889aad7f3f40e9fba5 -text
 slide-puzzle/Library/metadata/5c/5c448ea26d6fe2f41b02de80f9cd9141 -text
 slide-puzzle/Library/metadata/5d/5d63a1abb44ac41d39dcc41c9f3c147e -text
 slide-puzzle/Library/metadata/5f/5f37a1bc509575f468d932e8f95e37ed -text
+slide-puzzle/Library/metadata/5f/5f753ea984e8fac4c8e1020ebeef15b5 -text
 slide-puzzle/Library/metadata/62/6256cb6299aaa274099267a2e00a4822 -text
 slide-puzzle/Library/metadata/66/6685d213dcd37451eaa7643f63089046 -text
 slide-puzzle/Library/metadata/66/66c8d8b89e1ed4a37bece5045a6aa889 -text
@@ -271,7 +273,6 @@ slide-puzzle/Library/metadata/b8/b8cf65c6c5e4a4d88b7a16e847002999 -text
 slide-puzzle/Library/metadata/b9/b9e64986b90aba749b649efdb1b61bf0 -text
 slide-puzzle/Library/metadata/bc/bc909e8e75e9e47b495b8655f87a7922 -text
 slide-puzzle/Library/metadata/bc/bcf1704da4dcf4ca7be0acf40020b0c4 -text
-slide-puzzle/Library/metadata/bd/bdbf11b00e94cbd45b2c928a08308cdd -text
 slide-puzzle/Library/metadata/c1/c1259bb9bcb6e481ba03f5d0337633d5 -text
 slide-puzzle/Library/metadata/c4/c494c890ec8664fd9aa7d66ebfa1a7e6 -text
 slide-puzzle/Library/metadata/c7/c7823349d54534cd1b3078b6bf95c848 -text
@@ -289,7 +290,6 @@ slide-puzzle/Library/metadata/d4/d41cb305605d6c84992ea6f373d7f1a5 -text
 slide-puzzle/Library/metadata/d5/d51e7d424e4564f9db26e6b4bdd3e9ac -text
 slide-puzzle/Library/metadata/d5/d5d58c10e934a4738aa90eb4e904a166 -text
 slide-puzzle/Library/metadata/d6/d619a3bc95e45dd44b6a4731f98be756 -text
-slide-puzzle/Library/metadata/d7/d7d841c9d51789146bef45c110c70f96 -text
 slide-puzzle/Library/metadata/da/da8e93600ecdd4feca9cfb553a314e48 -text
 slide-puzzle/Library/metadata/e0/e08c295755c0885479ad19f518286ff2 -text
 slide-puzzle/Library/metadata/e1/e14df94c1bd5d475bb0fb92fefa1f00d -text
@@ -299,9 +299,7 @@ slide-puzzle/Library/metadata/e9/e9f2d13451d4f4ed3a7965713b109f59 -text
 slide-puzzle/Library/metadata/eb/ebeafa2f107dd41c2b474fb590ff5080 -text
 slide-puzzle/Library/metadata/ec/ec5667df22fb34ecea873cf23d6a3f52 -text
 slide-puzzle/Library/metadata/ef/ef4c125ff680143769b0c8bf1f1bd828 -text
-slide-puzzle/Library/metadata/f8/f8f4d40e08aea8b469732d59ba718062 -text
 slide-puzzle/Library/metadata/f9/f9c7d36390a1f4ecdb33d03c3cac3cff -text
-slide-puzzle/Library/metadata/fb/fb0c9bbc596ec9741bf04f32c003e957 -text
 slide-puzzle/Library/metadata/fd/fd6361dbb4a934d4d96990cefbc0a4ae -text
 slide-puzzle/Library/metadata/fd/fdb0e74263a98984a94414d586beb4f5 -text
 slide-puzzle/Library/metadata/fe/fed124f80617b40f0917847d5c87ca73 -text
