Added logo to title screen and splash dialogue.
git-svn-id: https://su-13-project-slide-puzzle.googlecode.com/svn/trunk@22 d0c1d654-13ed-1448-279f-2abfe13a84c8

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
 * text=auto !eol
-Executables/SlidePuzzleLinux.zip -text
-Executables/SlidePuzzleMac.zip -text
-Executables/SlidePuzzleWindows.zip -text
+Executables/SlidePuzzle[!!-~]-[!!-~]Linux.zip -text
+Executables/SlidePuzzle[!!-~]-[!!-~]Mac.zip -text
+Executables/SlidePuzzle[!!-~]-[!!-~]Windows.zip -text
 Kay/large_board.blend -text
 Kay/med_board.blend -text
 Kay/small_board.blend -text
@@ -47,6 +47,8 @@ slide-puzzle/Assets/Prefabs/Models/xl_board.blend -text
 slide-puzzle/Assets/Prefabs/PuzzleTile.prefab -text
 slide-puzzle/Assets/Prefabs/SmallBoard.prefab -text
 slide-puzzle/Assets/Prefabs/XLargeBoard.prefab -text
+slide-puzzle/Assets/Resources/Images/logo.png -text
+slide-puzzle/Assets/Resources/Images/logo2.png -text
 slide-puzzle/Assets/Scenes/Main.unity -text
 slide-puzzle/Assets/Scripts/Board.cs -text
 slide-puzzle/Assets/Scripts/Main.cs -text
